--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -4,6 +4,7 @@
     <li class="item" routerLink="/dashboard"><a>Home</a></li>
     <li class="item" routerLink="/providers"><a>Proveedores</a></li>
     <li class="item" routerLink="/clients"><a>Clientes</a></li>
+    <li class="item" routerLink="/categories"><a>Categorias producto</a></li>
   
   </ul>
 </div>
