Pérdida a la mitad

--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -4,7 +4,8 @@
     <li class="item" routerLink="/dashboard"><a>Home</a></li>
     <li class="item" routerLink="/providers"><a>Proveedores</a></li>
     <li class="item" routerLink="/clients"><a>Clientes</a></li>
-  
+    <li class="item" routerLink="/loss"><a>loss</a></li>
+
   </ul>
 </div>
 </nav>
