El botón de export ya no es obligatorio y el botón de clear fue reemplazado por una X en el buscador.

--- a/FRONT-END/src/app/modules/clients/clients.component.html
+++ b/FRONT-END/src/app/modules/clients/clients.component.html
@@ -3,15 +3,12 @@
   [items]="filteredClients" 
   [columns]="columns" 
   [canDelete]="false" 
-
   (create)="openCreateModal()"
-
   (deleteAll)="deleteAllClients()" 
+  [canExport]="true" 
   (export)="exportClients()" 
-
   (edit)="openEditModal($event)"
   (delete)="confirmDelete($event)" 
-  
   (search)="searchClients($event)">
 </app-crud>
 
