--- a/FRONT-END/src/app/shared/crud/crud.component.html
+++ b/FRONT-END/src/app/shared/crud/crud.component.html
@@ -1,26 +1,22 @@
 <div class="card">
-  <div class="flex justify-between mb-3">
+  <div class="flex justify-between mb-3 items-center">
     <div class="flex space-x-2">
-      <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success"
-              (click)="onCreate()"></button>
-      <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger"
-              (click)="onDeleteAll()"></button>
+      <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success" (click)="onCreate()"></button>
+      <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger" (click)="onDeleteAll()"></button>
     </div>
-    <button pButton pRipple label="Export" icon="pi pi-upload" class="p-button-help"
-            (click)="onExport()"></button>
+    <div class="relative ml-auto flex items-center space-x-2">
+      <button *ngIf="canExport" pButton pRipple label="Export" icon="pi pi-upload" class="p-button-help"
+        (click)="onExport()"></button>
+        <input pInputText type="text" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Buscar" class="pr-10" />
+        <i *ngIf="searchQuery" class="pi pi-times absolute top-3 right-3 transform -translate-y-1/2 cursor-pointer text-gray-500"
+           (click)="clearSearch()"></i>
+        
+    </div>
   </div>
-
-  <div class="search-container flex justify-between mb-3">
-    <p-button label="Clear" [outlined]="true" icon="pi pi-filter-slash" (click)="clearSearch()" />
-    <span class="p-input-icon-left ml-auto">
-      <input pInputText type="text" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Buscar" />
-    </span>
-  </div>
-
-  <p-table [value]="items" [tableStyle]="{'min-width': '50rem'}" sortMode="multiple"
-           [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
-           currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-           [rowsPerPageOptions]="[5, 10, 25, 50]">
+  
+  <p-table [value]="items" [tableStyle]="{'min-width': '50rem'}" sortMode="multiple" [paginator]="true" [rows]="5"
+    [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[5, 10, 25, 50]">
     <ng-template pTemplate="header">
       <tr>
         <th *ngFor="let col of columns" [pSortableColumn]="col.field">
@@ -37,9 +33,9 @@
         <td>
           <div class="flex">
             <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
-                    (click)="onEdit(item)"></button>
+              (click)="onEdit(item)"></button>
             <button *ngIf="canDelete" pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
-                    (click)="onDelete(item)"></button>
+              (click)="onDelete(item)"></button>
           </div>
         </td>
       </tr>
