Se incorpora el checkbox en el CRUD.

--- a/FRONT-END/src/app/modules/categories/categories.component.html
+++ b/FRONT-END/src/app/modules/categories/categories.component.html
@@ -1,8 +1,19 @@
 <!-- PLANTILLA CRUD -->
+ 
 <!-- aqui se llaman  las funciones definidas en el component.ts -->
-<app-crud [items]="filteredCategories" [columns]="columns" [canDelete]="true" (create)="openCreateModal()"
-    (deleteAll)="deleteAllCategories()" (export)="exportCategorie()" (edit)="openEditModal($event)"
-    (delete)="confirmDelete($event)" (search)="searchCategorie($event)">
+<app-crud 
+    [items]="filteredCategories"
+    [columns]="columns" 
+    [canDelete]="true" 
+    [canExport]="false" 
+    [(selection)]="selectedCategories"
+    [dataKey]="'idCategoria'"
+    (create)="openCreateModal()"
+    (deleteAll)="deleteAllCategories()" 
+    (export)="exportCategorie()" 
+    (edit)="openEditModal($event)"
+    (delete)="confirmDelete($event)" 
+    (search)="searchCategorie($event)">
 </app-crud>
 
 <!-- FORMULARIOS -->
