--- a/FRONT-END/src/app/modules/clients/clients.component.html
+++ b/FRONT-END/src/app/modules/clients/clients.component.html
@@ -2,10 +2,12 @@
 <app-crud 
   [items]="filteredClients" 
   [columns]="columns" 
-  [canDelete]="false" 
+  [canDelete]="false"
+  [canExport]="true" 
+  [(selection)]="selectedClients" 
+  [dataKey]="'idCliente'"
   (create)="openCreateModal()"
   (deleteAll)="deleteAllClients()" 
-  [canExport]="true" 
   (export)="exportClients()" 
   (edit)="openEditModal($event)"
   (delete)="confirmDelete($event)" 
