--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -5,6 +5,7 @@
     <li class="item" routerLink="/providers"><a>Proveedores</a></li>
     <li class="item" routerLink="/clients"><a>Clientes</a></li>
     <li class="item" routerLink="/categories"><a>Categorias producto</a></li>
+    <li class="item" routerLink="/products"><a>Producto</a></li>
   
   </ul>
 </div>
