El trago arregla la vida (no apto para menores de edad front)

--- a/FRONT-END/src/app/modules/loss/loss.component.html
+++ b/FRONT-END/src/app/modules/loss/loss.component.html
@@ -2,10 +2,15 @@
 <app-crud 
   [items]="filteredLoss" 
   [columns]="colums" 
-  [canDelete]="false" 
-
+  [canDelete]="false"
+  [canExport]="false" 
+  [canEdit]="false"
+  [Check]="false"
+  [actions]="false"
+  [DeleteGeneral]="false"
+  [dataKey]="'idDevolucionDeBaja'"  
   (create)="openCreateModal()"
-  (search)="searchClients($event)">
+  (search)="searchLoss($event)">
 </app-crud>
 
 <!-- FORMULARIOS -->
