roles and users front-end

--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -2,6 +2,8 @@
   <div class="mt-5">
   <ul>
     <li class="item" routerLink="/dashboard"><a>Home</a></li>
+    <li class="item" routerLink="/users"><a>Usuarios</a></li>
+    <li class="item" routerLink="/roles"><a>Roles</a></li>
     <li class="item" routerLink="/providers"><a>Proveedores</a></li>
     <li class="item" routerLink="/clients"><a>Clientes</a></li>
     <li class="item" routerLink="/loss"><a>Perdida</a></li>
