--- a/FRONT-END/src/app/modules/loss/loss.component.html
+++ b/FRONT-END/src/app/modules/loss/loss.component.html
@@ -5,6 +5,7 @@
   [canDelete]="false"
   [canExport]="false" 
   [canEdit]="false"
+  [canSeeDetail]="false" 
   [actions]="false"
   (create)="openCreateModal()"
   (search)="searchLoss($event)">
@@ -48,8 +49,8 @@
     </form>
   </ng-template>
   <ng-template pTemplate="footer">
-    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text" (click)="closeModal()"></button>
-    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" class="p-button-text"
+    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn" (click)="closeModal()"></button>
+    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" class="p-button-text custom-save-btn"
       (click)="saveLoss()"></button>
   </ng-template>
 </p-dialog>
