--- a/FRONT-END/src/app/modules/users/users.component.html
+++ b/FRONT-END/src/app/modules/users/users.component.html
@@ -3,6 +3,7 @@
 [columns]="columns" 
 [canDelete]="true" 
 [canExport]="false"
+[canSeeDetail]="false" 
 (create)="openCreateModal()"
 (edit)="openEditModal($event)" 
 (delete)="confirmDelete($event)"
@@ -82,8 +83,8 @@
     </form>
   </ng-template>
   <ng-template pTemplate="footer">
-    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text" (click)="closeModal()"></button>
-    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" class="p-button-text"
+    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn" (click)="closeModal()"></button>
+    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" class="p-button-text custom-save-btn"
       (click)="saveUser()"></button>
   </ng-template>
 </p-dialog>
