--- a/FRONT-END/src/app/modules/clients/clients.component.html
+++ b/FRONT-END/src/app/modules/clients/clients.component.html
@@ -4,6 +4,7 @@
   [columns]="columns" 
   [canDelete]="false"
   [canExport]="true" 
+  [canSeeDetail]="true" 
   (create)="openCreateModal()"
   (export)="exportClients()" 
   (edit)="openEditModal($event)"
@@ -16,32 +17,30 @@
 <p-dialog [(visible)]="showModal" [style]="{width: '450px'}" [header]="isEditing ? 'Editar Cliente' : 'Crear Cliente'"
   [modal]="true" class="p-fluid" appCrudModal [isEditing]="isEditing" (save)="saveClient()" (cancel)="closeModal()">
   <ng-template pTemplate="content">
-    <form [formGroup]="clientForm">
-      <div class="field">
+    <form [formGroup]="clientForm">    
+
+      <div class="field" [ngClass]="{'error': clientForm.get('cedulaCliente')?.invalid && clientForm.get('cedulaCliente')?.touched}">
         <label for="cedulaCliente">Cédula</label>
-        <input type="text" pInputText id="cedulaCliente" formControlName="cedulaCliente" required autofocus />
-        <small class="p-error"
-          *ngIf="clientForm.get('cedulaCliente')?.invalid && clientForm.get('cedulaCliente')?.touched">
-          La cédula es obligatoria.
+        <input type="text" pInputText id="cedulaCliente" formControlName="cedulaCliente" maxlength="10" required autofocus />
+        <small class="p-error" *ngIf="clientForm.get('cedulaCliente')?.invalid && clientForm.get('cedulaCliente')?.touched">
+          {{ getErrorMessage('cedulaCliente') }}
         </small>
       </div>
 
       <div class="field-group">
         <div class="field">
           <label for="nombreCliente">Nombre</label>
-          <input type="text" pInputText id="nombreCliente" formControlName="nombreCliente" required />
-          <small class="p-error"
-            *ngIf="clientForm.get('nombreCliente')?.invalid && clientForm.get('nombreCliente')?.touched">
-            El nombre es obligatorio.
+          <input type="text" pInputText id="nombreCliente" formControlName="nombreCliente" pattern="[A-Za-z\s]+" required />
+          <small class="p-error" *ngIf="clientForm.get('nombreCliente')?.invalid && clientForm.get('nombreCliente')?.touched">
+            {{ getErrorMessage('nombreCliente') }}
           </small>
         </div>
 
         <div class="field">
           <label for="apellidoCliente">Apellido</label>
-          <input type="text" pInputText id="apellidoCliente" formControlName="apellidoCliente" required />
-          <small class="p-error"
-            *ngIf="clientForm.get('apellidoCliente')?.invalid && clientForm.get('apellidoCliente')?.touched">
-            El apellido es obligatorio.
+          <input type="text" pInputText id="apellidoCliente" formControlName="apellidoCliente" pattern="[A-Za-z\s]+" required />
+          <small class="p-error" *ngIf="clientForm.get('apellidoCliente')?.invalid && clientForm.get('apellidoCliente')?.touched">
+            {{ getErrorMessage('apellidoCliente') }}
           </small>
         </div>
       </div>
@@ -50,26 +49,24 @@
         <div class="field">
           <label for="direccionCliente">Dirección</label>
           <input type="text" pInputText id="direccionCliente" formControlName="direccionCliente" required />
-          <small class="p-error"
-            *ngIf="clientForm.get('direccionCliente')?.invalid && clientForm.get('direccionCliente')?.touched">
-            La dirección es obligatoria.
+          <small class="p-error" *ngIf="clientForm.get('direccionCliente')?.invalid && clientForm.get('direccionCliente')?.touched">
+            {{ getErrorMessage('direccionCliente') }}
           </small>
         </div>
         
         <div class="field">
           <label for="telefonoCliente">Teléfono</label>
-          <input type="text" pInputText id="telefonoCliente" formControlName="telefonoCliente" required />
-          <small class="p-error"
-            *ngIf="clientForm.get('telefonoCliente')?.invalid && clientForm.get('telefonoCliente')?.touched">
-            El teléfono es obligatorio.
+          <input type="text" pInputText id="telefonoCliente" formControlName="telefonoCliente"  pattern="[0-9]+" minlength="7" maxlength="10" required />
+          <small class="p-error" *ngIf="clientForm.get('telefonoCliente')?.invalid && clientForm.get('telefonoCliente')?.touched">
+            {{ getErrorMessage('telefonoCliente') }}
           </small>
         </div>
       </div>
     </form>
   </ng-template>
   <ng-template pTemplate="footer">
-    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text" (click)="closeModal()"></button>
-    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" class="p-button-text"
-      (click)="saveClient()"></button>
+    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn" (click)="closeModal()"></button>
+<button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" class="p-button-text custom-save-btn" (click)="saveClient()"></button>
+
   </ng-template>
 </p-dialog>
