--- a/FRONT-END/src/app/modules/providers/providers.component.html
+++ b/FRONT-END/src/app/modules/providers/providers.component.html
@@ -1,9 +1,9 @@
 <!-- PLANTILLA CRUD -->
-
 <app-crud [items]="filteredProviders" 
   [columns]="columns" 
-  [canDelete]="true"
+  [canDelete]="false"
   [canExport]="false" 
+  [canSeeDetail]="false" 
   (create)="openCreateModal()"
   (export)="exportProviders()" 
   (edit)="openEditModal($event)"
@@ -18,52 +18,57 @@
   [isEditing]="isEditing" (save)="saveProvider()" (cancel)="closeModal()">
   <ng-template pTemplate="content">
     <form [formGroup]="providerForm">
-
-
       <div class="field-group">
-        <div class="field">
+        <div class="field"
+          [ngClass]="{'error': providerForm.get('nitProveedor')?.invalid && providerForm.get('nitProveedor')?.touched}">
           <label for="nitProveedor">NIT</label>
-          <input type="number" pInputText id="nitProveedor" formControlName="nitProveedor" required autofocus />
+          <input type="text" pInputText id="nitProveedor" formControlName="nitProveedor" maxlength="10" required autofocus />
           <small class="p-error"
             *ngIf="providerForm.get('nitProveedor')?.invalid && providerForm.get('nitProveedor')?.touched">
-            El NIT es obligatorio.
+            {{ getErrorMessage('nitProveedor') }}
           </small>
         </div>
 
-        <div class="field">
+        <div class="field"
+          [ngClass]="{'error': providerForm.get('nombreProveedor')?.invalid && providerForm.get('nombreProveedor')?.touched}">
           <label for="nombreProveedor">Nombre</label>
-          <input type="text" pInputText id="nombreProveedor" formControlName="nombreProveedor" required autofocus/>
+          <input type="text" pInputText id="nombreProveedor" formControlName="nombreProveedor" required autofocus />
           <small class="p-error"
             *ngIf="providerForm.get('nombreProveedor')?.invalid && providerForm.get('nombreProveedor')?.touched">
-            El nombre es obligatorio.
+            {{ getErrorMessage('nombreProveedor') }}
           </small>
         </div>
       </div>
 
       <div class="field-group">
-        <div class="field">
+        <div class="field"
+          [ngClass]="{'error': providerForm.get('direccionProveedor')?.invalid && providerForm.get('direccionProveedor')?.touched}">
           <label for="direccionProveedor">Dirección</label>
-          <input type="text" pInputText id="direccionProveedor" formControlName="direccionProveedor" required autofocus/>
+          <input type="text" pInputText id="direccionProveedor" formControlName="direccionProveedor" required
+            autofocus />
           <small class="p-error"
             *ngIf="providerForm.get('direccionProveedor')?.invalid && providerForm.get('direccionProveedor')?.touched">
-            La dirección es obligatoria.
+            {{ getErrorMessage('direccionProveedor') }}
           </small>
         </div>
 
-        <div class="field">
+        <div class="field"
+          [ngClass]="{'error': providerForm.get('telefonoProveedor')?.invalid && providerForm.get('telefonoProveedor')?.touched}">
           <label for="telefonoProveedor">Teléfono</label>
-          <input type="text" pInputText id="telefonoProveedor" formControlName="telefonoProveedor" required autofocus/>
+          <input type="text" pInputText id="telefonoProveedor" formControlName="telefonoProveedor" maxlength="10" autofocus />
           <small class="p-error"
             *ngIf="providerForm.get('telefonoProveedor')?.invalid && providerForm.get('telefonoProveedor')?.touched">
-            El teléfono es obligatorio.
+            {{ getErrorMessage('telefonoProveedor') }}
           </small>
         </div>
+
       </div>
+
     </form>
   </ng-template>
   <ng-template pTemplate="footer">
-    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text" (click)="closeModal()"></button>
-    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" class="p-button-text"
+    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn" (click)="closeModal()"></button>
+    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" class="p-button-text custom-save-btn"
       (click)="saveProvider()"></button>
   </ng-template>
 </p-dialog>
