--- a/FRONT-END/src/app/shared/crud/crud.component.html
+++ b/FRONT-END/src/app/shared/crud/crud.component.html
@@ -42,8 +42,10 @@
             <div class="flex">
               <button *ngIf="canEdit" pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
                 (click)="onEdit(item)"></button>
-              <button *ngIf="canDelete" pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
+              <button *ngIf="canDelete" pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning mr-2"
                 (click)="onDelete(item)"></button>
+              <button *ngIf="canSeeDetail" pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-info"
+                (click)="onDetail(item)"></button>
             </div>
           </td>
         </tr>
